# doctem

./: Dockertemplate  LICENSE  Main.hs  README.md  doctem.cabal  doctem.yml
src/System/Doctem/: Template.hs  Types.hs
test/System/Doctem/: TemplateSpec.hs
