name:                doctem
version:             0.1.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Sebastián Estrella
maintainer:          sebas007estrella@gmail.com
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs: src
  exposed-modules:
    System.Doctem.Template
    System.Doctem.Types
  build-depends:
    base       >= 4.6 && < 4.8,
    yaml       >= 0.8 && < 0.9,
    containers >= 0.5 && < 0.6,
    hastache   >= 0.6 && < 0.7,
    text       >= 1.2 && < 1.3,
    directory  >= 1.2 && < 1.3
  default-language: Haskell2010

executable doctem
  main-is: Main.hs
  build-depends: base, doctem
  default-language: Haskell2010
  ghc-options: -Wall -Werror

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
    base,
    hspec >= 2.0 && < 2.1,
    doctem,
    containers,
    text,
    hastache
  default-language: Haskell2010
